# rustscenic

./: .gitignore  .zenodo.json  AGENTS.md  AUTHORS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Cargo.toml  QUICKSTART.md  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  correctness.yml  validation_report.yml
.github/workflows/: audit.yml  nightly-real-data.yml  release.yml
crates/rustscenic-aucell/: Cargo.toml
crates/rustscenic-aucell/src/: lib.rs
crates/rustscenic-cli/: Cargo.toml
crates/rustscenic-cli/src/: main.rs
crates/rustscenic-core/: Cargo.toml
crates/rustscenic-core/src/: error.rs  lib.rs  sparse.rs
crates/rustscenic-grn/: Cargo.toml
crates/rustscenic-grn/src/: gbm.rs  histogram.rs  importance.rs  lib.rs  rng.rs  tree.rs
crates/rustscenic-preproc/: Cargo.toml
crates/rustscenic-preproc/src/: fragments.rs  lib.rs  matrix.rs  peak_calling.rs  peaks.rs  qc.rs
crates/rustscenic-py/: Cargo.toml
crates/rustscenic-py/src/: lib.rs
crates/rustscenic-topics/: Cargo.toml
crates/rustscenic-topics/src/: gibbs.rs  lib.rs
docs/: atac-preprocessing-scope.md  bench-vs-references.md  collaboration-and-authorship.md  email_to_kuan_v0.1.md  independent-debate.md  landscape-comparison.md  release-gate.md  roadmap-v0.2.md  seurat-interop.md  tester-quickstart.md  tester-reporting.md  topic-collapse.md  v0.4.0-readiness.md  v0.4.x-benchmark-plan.md  what-rustscenic-is.md
docs/specs/: 2026-04-16-rustscenic-design.md
examples/: atac_fragments_to_matrix.py  pbmc3k_end_to_end.py
manuscript/: rustscenic_preprint.md
python/rustscenic/: __init__.py  _gene_resolution.py  _rustscenic.pyi  aucell.py  cistarget.py  cli.py  enhancer.py  eregulon.py  grn.py  pipeline.py  preproc.py  quickstart.py  specificity.py  topics.py
python/rustscenic/data/: __init__.py
skills/: rustscenic.md
tests/: conftest.py  test_aucell.py  test_cistarget.py  test_convention_mismatch_guards.py  test_enhancer.py  test_eregulon.py  test_full_scenicplus_smoke.py  test_gene_resolution.py  test_grn.py  test_pipeline_integration.py  test_preproc_python_api.py  test_public_api_smoke.py  test_scaling_regression.py  test_seurat_like_input.py  test_specificity.py  test_topics.py  test_topics_gibbs.py
validation/: README.md  VALIDATION_SUMMARY.md  aucell_celltype_check.py  aucell_celltype_pbmc10k.py  bench_pbmc10k.py  benchmarks.py  collectri_recall.py  compare.py  compare_pipelines_multiome.py  fresh_install_proof.md  grn_parity_v0310.py  multiome_fresh_env_smoke.sh  multiome_full_scenicplus_smoke.sh  multiome_full_stage_smoke_v0.3.7.json  multiome_pbmc_3k_v0.3.6.json  multiome_pipeline_run_v0.3.10_brain_e18.json  multiome_pipeline_run_v0.3.10_brain_smoke.sh  multiome_pipeline_run_v0.3.9.json  multiome_pipeline_run_v0.3.9_smoke.sh  prep_pbmc10k.py  reference_pipeline_multiome.py  results.csv  run_rustscenic_grn_pbmc3k.py  validate_aucell_pbmc10k.py  validate_aucell_pbmc3k.py  validate_cistarget_scale.py  validate_correctness.py  validate_multiome_e2e.py  validate_paul15_mouse.py  validate_tirosh_melanoma.py  validate_topics_atac_synthetic.py  validate_topics_gensim.py  validate_topics_real_scatac.py  ziegler_headtohead_2026-04-19.md
validation/baselines/: pbmc3k_grn.json  pbmc3k_grn.parquet
validation/kamath/: README.md  validate_kamath_fix.py
validation/kamath_da/: KAMATH_AUDIT.md  build_pseudobulk_fixture.py  canonical_da_tf_recovery.json  grn_parity_kamath.json  grn_parity_kamath_truncated.json  kamath_da_subtype_pseudobulk.h5ad  kamath_tfs_in_matrix.txt  pyscenic_grn_kamath.json  rustscenic_grn_kamath.meta.json  rustscenic_grn_kamath_cells.meta.json  rustscenic_grn_kamath_sqrt.meta.json
validation/kamath_da/tmp_cell_subset_test/: arboreto_subset_grn.json  arboreto_subset_grn.parquet  grn_parity_subset.json  rustscenic_subset_grn.meta.json  subset_density_biology_summary.json  subset_meta.json  subset_truncation_sweep.json
validation/ours/: pbmc3k_grn_n50.json  pbmc3k_grn_n50.parquet
validation/parity_v0310/: grn_parity_pbmc3k.json  grn_parity_pbmc3k_full.json  pyscenic_grn_pbmc3k.json  rustscenic_grn_pbmc3k.meta.json
validation/reference/: Dockerfile  datasets.sh  run_reference.py
validation/scaling/: README.md  bench_e2e_100k_synthetic.py  bench_e2e_200k_synthetic.py  bench_full_pipeline_gibbs.py  bench_full_pipeline_pbmc_multiome.py  bench_gensim_lda.py  bench_gibbs_50k.py  bench_gibbs_parallel.py  bench_gibbs_parallel_synth_atlas.py  bench_grn_500k.py  bench_macs2_head_to_head.py  bench_multi_dataset.py  bench_npmi_head_to_head.py  bench_pbmc_multiome_3k.py  bench_real_pbmc_full_e2e.py  bench_scaling.py  e2e_100k_synthetic.json  e2e_200k_synthetic.json  e2e_200k_synthetic_partial.json  gibbs_100k.json  gibbs_50k.json  gibbs_parallel.json  gibbs_parallel_synth_atlas.json  grn_500k.json  grn_scaling_curve.py  measure_pyo3_borrow.py  microglia_91k_grn_scaling.json  microglia_91k_grn_scaling_post_scratch_smoke.json  microglia_91k_grn_scaling_target_blocked.json  npmi_head_to_head.json  real_multiome_full_e2e.json  real_multiome_gibbs_e2e.json  real_pbmc_full_e2e.json  real_pbmc_full_e2e_partial.json  scaling_results.csv  scaling_results_pbmc_postfix.csv  scaling_results_ziegler.csv  scaling_results_ziegler_postfix.csv  synth_200k_grn_scaling.json
