[package]
name = "rustscenic-aucell"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
rustscenic-core = { path = "../rustscenic-core" }
ndarray = { workspace = true }
rayon = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
approx = "0.5"
