[package]
name = "rustscenic-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "rustscenic"
path = "src/main.rs"

[dependencies]
rustscenic-core = { path = "../rustscenic-core" }
rustscenic-grn = { path = "../rustscenic-grn" }
clap = { workspace = true }
anyhow = { workspace = true }
