[package]
name = "rustscenic-grn"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
rustscenic-core = { path = "../rustscenic-core" }
sprs = { workspace = true }
ndarray = { workspace = true }
rayon = { workspace = true }
anyhow = { workspace = true }
