[package]
name = "rustscenic-grn"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
sprs = { workspace = true }
ndarray = { workspace = true }
rayon = { workspace = true }
anyhow = { workspace = true }
rand = "0.10"
rand_mt = "6"   # numpy-compatible MT19937 for seed fidelity with sklearn
thiserror = { workspace = true }

[dev-dependencies]
approx = "0.5"
