[package]
name = "rustscenic-py"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Python bindings for rustscenic (internal; the PyPI package is 'rustscenic')"
repository = "https://github.com/Ekin-Kahraman/rustscenic"

[lib]
name = "_rustscenic"
crate-type = ["cdylib"]

[dependencies]
rustscenic-core = { path = "../rustscenic-core" }
rustscenic-grn = { path = "../rustscenic-grn" }
rustscenic-aucell = { path = "../rustscenic-aucell" }
rustscenic-topics = { path = "../rustscenic-topics" }
rustscenic-preproc = { path = "../rustscenic-preproc" }
pyo3 = { workspace = true, features = ["abi3-py310"] }
numpy = { workspace = true }
ndarray = { workspace = true }
anyhow = { workspace = true }
