[package]
name = "rustscenic-topics"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
rustscenic-core = { path = "../rustscenic-core" }
ndarray = { workspace = true }
rayon = { workspace = true }
rand = "0.8"
statrs = "0.17"
thiserror = { workspace = true }

[dev-dependencies]
approx = "0.5"
